--- a/index.html
+++ b/index.html
@@ -1,22 +1,5 @@
+o html servi para criar site, isto e link, um paragrafo, um titulo
+consiste em uma serie de elementos, esses elementos HTML informam ao navegador como exibir o conteudo do site.
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-   <h1>Carlos's Portfolio</h1>
-   <h2>I am a web Developer</h2>
-   <h3><a href="">Movie Raking Project</a></h3>
-   <img src="./assets/images/movie-ranking.png" height="200" alt="Movie ranking project preview" />
-   <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-   <img src="./assets/images/birthday-invite.png" height="200" alt="Birthday invite project preview" />
-   <hr />
-   <a href="./public/about.html" >About Me</a>
-   <a href="./public/contact.html" >Contact Me</a>
-</body>
-</html>
-
+O javascript e uma linguagem para popular do mundo.
+e uma programacao de linguagem da web, facil de aprender.
